syntax = "proto3";

package loginsrv;

option go_package = "proto;loginsrv";

service LoginSrv {
	rpc Login(LoginRequest) returns (LoginResponse) {}
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	int32  status = 1;
	string msg = 2;
}

